Initial content revision

--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 ---
 layout: default
-title: Landing Page
-subTitle: A Template by Start Bootstrap
+title: TRACE&colon; Building trust in computational research
+subTitle: A new approach to computational transparency and reproducibility
 ---
