--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 ---
-layout: default
+layout: home
 title: TRACE&colon; Building trust in computational research
 subTitle: A new approach to computational transparency and reproducibility
 ---
