still do not know why this does not work

--- a/jobs.html
+++ b/jobs.html
@@ -1,5 +1,7 @@
 ---
 layout: archive
-title: TRACE&colon; Building trust in computational research
-subTitle: A new approach to computational transparency and reproducibility
+title: Jobs at TRACE
+subTitle: We have intership opportunities.
 ---
+
+We are here.
